--- a/src/bundle/Resources/public/scss/_main-row.scss
+++ b/src/bundle/Resources/public/scss/_main-row.scss
@@ -4,8 +4,6 @@
 
     .ez-side-menu,
     .ez-context-menu {
-        position: relative;
-        z-index: 3;
         flex: 0 0 calculateRem(80px);
     }
 
